--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-debugbar": "*",
         "nwidart/db-exporter": "*",
         "overtrue/laravel-pinyin": "~3.0",
-        "overtrue/laravel-wechat":"~3.0"
+        "overtrue/laravel-wechat":"~3.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
