--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,22 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
+        "php": "^7.1.3",
+        "doctrine/dbal": "^2.7",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.6.*",
+        "laravel/tinker": "^1.0",
         "barryvdh/laravel-debugbar": "*",
         "nwidart/db-exporter": "*",
-        "overtrue/laravel-pinyin": "~3.0",
-        "overtrue/laravel-wechat":"~3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "overtrue/laravel-wechat":"~4.0"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^2.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
