--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "*",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "fukuball/jieba-php": "^0.33.0",
         "laravel/framework": "5.6.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "^1.0",
-        "barryvdh/laravel-debugbar": "*",
         "nwidart/db-exporter": "*",
+        "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
-        "overtrue/laravel-wechat":"~4.0"
+        "vanry/laravel-scout-tntsearch":"^1.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
