--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "nwidart/db-exporter": "*",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
+        "jenssegers/agent": "^2.6",
         "vanry/laravel-scout-tntsearch":"^1.3"
     },
     "require-dev": {
