--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 /public/hot
 /public/storage
 /public/upload
-/storage/
+/storage/logs
+/storage/framework
+/storage/app
 /sql
 /vendor
 /.idea
@@ -12,3 +14,5 @@ Homestead.yaml
 npm-debug.log
 sftp-config.json
 .env
+*.sublime-project
+*.sublime-workspace
