--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "vue-resource": "^0.9.3",
     "vue-router": "^2.0.0-rc.3",
     "vuex": "^2.3.1"
+  },
+  "dependencies": {
+    "iview": "^3.1.5"
   }
 }
