--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
-    "vue-router": "^2.0.0-rc.3",
+    "vue-router": "^2.0.0",
     "vuex": "^2.3.1",
     "webpack-livereload-plugin": "^0.11.0"
   },
