--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "barryvdh/laravel-debugbar": "*",
         "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
-        "fukuball/jieba-php": "^0.33.0",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.6.*",
-        "laravel/scout": "^4.0",
         "laravel/tinker": "^1.0",
         "nwidart/db-exporter": "*",
         "overtrue/laravel-wechat": "~4.0",
-        "predis/predis": "^1.1",
-        "vanry/laravel-scout-tntsearch": "^1.3"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
