--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jquery": "^3.3.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.5.18",
+    "vue": "^2.5.19",
+    "vue-loader": "^10.0",
     "vue-router": "^2.0.0",
+    "vue-template-compiler": "^2.5.19",
     "vuex": "^2.3.1",
     "webpack-livereload-plugin": "^0.11.0"
   },
