--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.18.8",
-    "browser-sync-webpack-plugin": "^1.1.4",
-    "cross-env": "^3.2.3",
-    "jquery": "^3.3.1",
-    "laravel-mix": "0.*",
-    "lodash": "^4.17.4",
-    "vue": "^2.5.19",
-    "vue-loader": "^10.0",
-    "vue-router": "^2.0.0",
-    "vue-template-compiler": "^2.5.19",
-    "vuex": "^2.3.1",
-    "webpack-livereload-plugin": "^0.11.0"
+    "axios": "^0.19",
+    "bootstrap": "^4.3.1",
+    "cross-env": "^5.2",
+    "jquery": "^3.4",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.15",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.22.9",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.6.10",
+    "bootstrap-sass": "^3.4.1",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "vue-loader": "^15.7",
+    "vue-router": "^3.0.7",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack-livereload-plugin": "^2.2.0"
   },
   "dependencies": {
-    "iview": "^3.1.5",
+    "iview": "^3.4.2",
     "vue-axios": "^2.1.4",
     "wangeditor": "^3.1.1"
   }
